@@ -134,7 +134,7 @@ public class ReadPeakBidderTest extends VertxTest {
 
         final List<BidderError> errors = result.getErrors();
         assertThat(errors).hasSize(1);
-        assertThat(errors.get(0).getMessage())
+        assertThat(errors.getFirst().getMessage())
                 .startsWith("Failed to find compatible impressions for request");
     }
 
